--- a/web/src/pages/Home/style.css
+++ b/web/src/pages/Home/style.css
@@ -17,10 +17,11 @@
 }
 
 .search-icon {
-  margin-left: 10px;
+  margin-left: 5px;
   margin-top: 20px;
   font-size: 30px;
   color: #ffffff;
+  padding-right: 5px;
 }
 
 .search-icon:hover {
@@ -34,7 +35,7 @@
 
 .card-movie {
   width: 20rem;
-  margin: 15px;
+  margin: 20px;
   background-color: #111111;
   color: #ffffff;
 }
@@ -48,7 +49,18 @@
   color: #daa520;
 }
 
+.container-movies {
+  justify-content: center;
+  align-items: center;
+}
+
 a {
   text-decoration: none;
   color: #ffffff;
+}
+
+@media (max-width: 800px) {
+  .card-movie {
+    width: 25rem;
+  }
 }
